--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 </head>
 
 <body>
-  <main>
-    <div id="app"></div>
-  </main>
-  <div class="attribution">
+  <div id="app"></div>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Moses</a>.
-  </div>
+  </footer>
   <script type="module" src="/src/main.js"></script>
 </body>
 
