--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <div id="app"></div>
-  <footer class="attribution">
+  <footer class="text-[8px]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Moses</a>.
+    Coded by <a href="https://github.com/mbtenkorang">Moses</a>.
   </footer>
   <script type="module" src="/src/main.js"></script>
 </body>
