Add styling for mobile

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <footer class="text-[8px]">
+  <div id="app" class="h-dvh"></div>
+  <footer class=" text-[8px]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/mbtenkorang">Moses</a>.
   </footer>
