--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Frontend Mentor | Results summary component</title>
 </head>
 
-<body>
-  <div id="app" class="h-dvh"></div>
+<body class="flex flex-col items-center h-dvh">
+  <div id="app"></div>
   <footer class=" text-[8px]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/mbtenkorang">Moses</a>.
