Increase font-size of footer, Apply flex to body

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <title>Frontend Mentor | Results summary component</title>
 </head>
 
-<body class="flex flex-col items-center h-dvh">
+<body class="flex flex-col items-center h-full">
   <div id="app"></div>
-  <footer class=" text-[8px]">
+  <footer class=" text-[10px]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/mbtenkorang">Moses</a>.
   </footer>
