Adjust styles for desktop

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <title>Frontend Mentor | Results summary component</title>
 </head>
 
-<body class="flex flex-col items-center h-full">
-  <div id="app"></div>
+<body class="flex flex-col items-center h-dvh md:justify-center">
+  <div id="app" class="md:grid md:grid-cols-2 md:w-6/12 h-[36rem] md:rounded-3xl shadow-xl">
+  </div>
   <footer class=" text-[10px]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/mbtenkorang">Moses</a>.
