--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Frontend Mentor | Results summary component</title>
 </head>
 
-<body class="flex flex-col items-center h-dvh md:justify-center">
-  <div id="app" class="md:grid md:grid-cols-2 md:w-6/12 h-[36rem] md:rounded-3xl shadow-xl">
+<body class="flex flex-col items-center lg:h-dvh md:justify-center">
+  <div id="app" class="md:grid md:grid-cols-2 md:w-6/12 lg:h-[36rem] md:rounded-3xl shadow-xl">
   </div>
   <footer class=" text-[10px]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
