--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | Results summary component</title>
 </head>
 
-<body class="flex flex-col items-center lg:h-dvh md:justify-center">
+<body class="flex flex-col items-center lg:min-h-dvh md:justify-center">
   <div id="app" class="md:grid md:grid-cols-2 md:w-6/12 lg:h-[34rem] md:rounded-3xl shadow-xl">
   </div>
   <footer class=" text-[10px]">
